commit: learning numpy python

--- a/00-numpy-crash-course.ipynb
+++ b/00-numpy-crash-course.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 114,
    "id": "6d1f862f",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 115,
    "id": "1ced3cb9",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 116,
    "id": "2e506392",
    "metadata": {},
    "outputs": [
@@ -32,7 +32,7 @@
        "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 117,
    "id": "7e2bad64",
    "metadata": {},
    "outputs": [
@@ -53,7 +53,7 @@
        "np.int64(8)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 118,
    "id": "1ce86852",
    "metadata": {},
    "outputs": [
@@ -74,13 +74,236 @@
        "array([1, 2, 3, 4])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "arr[1:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "id": "1cc6958f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 2, 3, 4])"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "db597345",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10])"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr[0:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "id": "0e4c2ab6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Broadcasting\n",
+    "arr[0:5] = 100\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "id": "69c75092",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([100, 100, 100, 100, 100,   5,   6,   7,   8,   9,  10])"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr\n",
+    "\n",
+    "# In this example, what we've done with broadcasting is that we've replaced the first 5 indeces with the value of \"100\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "id": "63cdda3c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr = np.arange(0,11)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "id": "0a935463",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "slice_of_arr = arr[0:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "id": "351d8df1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "slice_of_arr[:] = 99\n",
+    "\n",
+    "# What this does is that it takes the slice of array that we did beforehand, and then broadcasted the values of that slice with the number \"99\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "id": "0a49760a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([99, 99, 99, 99, 99])"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "slice_of_arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "id": "89e12b3d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([99, 99, 99, 99, 99,  5,  6,  7,  8,  9, 10])"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr\n",
+    "\n",
+    "# and then here our main array takes the value of that sliced array and is then now implemented onto the current array."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "id": "9da08d61",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# In order to avoid having this to happen. We can create a copy of our original array by using the .copy() function.\n",
+    "\n",
+    "arr_copy = arr.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "id": "6d7443ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr_copy[:] = 100\n",
+    "\n",
+    "# here is the syntax for when we reassigned the values of our array copy."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "id": "aca6be3b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([100, 100, 100, 100, 100, 100, 100, 100, 100, 100, 100])"
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# But here in this syntax we have the original array as is.\n",
+    "\n",
+    "# copy of array with new assigned values.\n",
+    "arr_copy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "id": "ba6c3f82",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([99, 99, 99, 99, 99,  5,  6,  7,  8,  9, 10])"
+      ]
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Here is our original array.\n",
+    "arr"
    ]
   }
  ],
