--- a/00-numpy-crash-course.ipynb
+++ b/00-numpy-crash-course.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 234,
    "id": "6d1f862f",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 235,
    "id": "1ced3cb9",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 236,
    "id": "2e506392",
    "metadata": {},
    "outputs": [
@@ -32,7 +32,7 @@
        "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10])"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 236,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 237,
    "id": "7e2bad64",
    "metadata": {},
    "outputs": [
@@ -53,7 +53,7 @@
        "np.int64(8)"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 237,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 238,
    "id": "1ce86852",
    "metadata": {},
    "outputs": [
@@ -74,7 +74,7 @@
        "array([1, 2, 3, 4])"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 238,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 239,
    "id": "1cc6958f",
    "metadata": {},
    "outputs": [
@@ -95,7 +95,7 @@
        "array([0, 1, 2, 3, 4])"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 239,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 240,
    "id": "db597345",
    "metadata": {},
    "outputs": [
@@ -116,7 +116,7 @@
        "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10])"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 240,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 241,
    "id": "0e4c2ab6",
    "metadata": {},
    "outputs": [],
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 242,
    "id": "69c75092",
    "metadata": {},
    "outputs": [
@@ -149,7 +149,7 @@
        "array([100, 100, 100, 100, 100,   5,   6,   7,   8,   9,  10])"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 242,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 243,
    "id": "63cdda3c",
    "metadata": {},
    "outputs": [],
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 244,
    "id": "0a935463",
    "metadata": {},
    "outputs": [],
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 245,
    "id": "351d8df1",
    "metadata": {},
    "outputs": [],
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 246,
    "id": "0a49760a",
    "metadata": {},
    "outputs": [
@@ -204,7 +204,7 @@
        "array([99, 99, 99, 99, 99])"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 246,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 247,
    "id": "89e12b3d",
    "metadata": {},
    "outputs": [
@@ -225,7 +225,7 @@
        "array([99, 99, 99, 99, 99,  5,  6,  7,  8,  9, 10])"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 247,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 248,
    "id": "9da08d61",
    "metadata": {},
    "outputs": [],
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 249,
    "id": "6d7443ed",
    "metadata": {},
    "outputs": [],
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 250,
    "id": "aca6be3b",
    "metadata": {},
    "outputs": [
@@ -272,7 +272,7 @@
        "array([100, 100, 100, 100, 100, 100, 100, 100, 100, 100, 100])"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 250,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 251,
    "id": "ba6c3f82",
    "metadata": {},
    "outputs": [
@@ -296,7 +296,7 @@
        "array([99, 99, 99, 99, 99,  5,  6,  7,  8,  9, 10])"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 251,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,6 +304,203 @@
    "source": [
     "# Here is our original array.\n",
     "arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 252,
+   "id": "31fac257",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr_2d = np.array([[5, 10, 15],[20, 25, 30],[5, 10, 15]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 253,
+   "id": "af08be21",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3, 3)"
+      ]
+     },
+     "execution_count": 253,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr_2d.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 254,
+   "id": "669c8116",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 254,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr_2d.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 255,
+   "id": "240965ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[10, 15],\n",
+       "       [25, 30]])"
+      ]
+     },
+     "execution_count": 255,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr_2d[:2,1:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 256,
+   "id": "f7912829",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# conditional selection\n",
+    "\n",
+    "arr = np.arange(1, 11)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 257,
+   "id": "b3b6ec87",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1,  2,  3,  4,  5,  6,  7,  8,  9, 10])"
+      ]
+     },
+     "execution_count": 257,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 258,
+   "id": "8f4490b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([False, False, False, False,  True,  True,  True,  True,  True,\n",
+       "        True])"
+      ]
+     },
+     "execution_count": 258,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr > 4\n",
+    "\n",
+    "# this codeblock will check our array for values that are greater than \"4\", if it is it wil convert the values in our array to boolean values.\n",
+    "# Hence, returning the following output:\n",
+    "\n",
+    "# array([False, False, False, False,  True,  True,  True,  True,  True, True])\n",
+    "# In this case, any number that is lower than \"4\", will convert the value to \"False\", and if the value of our array is greater than \"4\", it will convert the value to True."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 259,
+   "id": "fecf7d84",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# if we want to get the values that were all turned to \"True\" use the following codeblock:\n",
+    "\n",
+    "bool_arr = arr>4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 260,
+   "id": "e3dc68fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([False, False, False, False,  True,  True,  True,  True,  True,\n",
+       "        True])"
+      ]
+     },
+     "execution_count": 260,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bool_arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1069e927",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 5,  6,  7,  8,  9, 10])"
+      ]
+     },
+     "execution_count": 262,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr[bool_arr]\n",
+    "\n",
+    "# end of codeblock\n",
+    " \n",
+    "# Here by using the original array(since this contains the numeric values of the bool_arr), and by using the bool_arr variable to return us the\n",
+    "# numeric values of the original array variable. Hence displaying the following output.\n",
+    "\n",
+    "# array([ 5,  6,  7,  8,  9, 10])"
    ]
   }
  ],
