commit: con't learning numpy array

--- a/00-NumPy-Arrays.ipynb
+++ b/00-NumPy-Arrays.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 58,
    "id": "b0c1d7c0",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 59,
    "id": "63c01191",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 60,
    "id": "07f17ec6",
    "metadata": {},
    "outputs": [
@@ -37,7 +37,7 @@
        "array([1, 2, 3, 4, 5])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 61,
    "id": "a336f281",
    "metadata": {},
    "outputs": [
@@ -59,7 +59,7 @@
        "numpy.ndarray"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 62,
    "id": "010f44ab",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 63,
    "id": "e2d9d21b",
    "metadata": {},
    "outputs": [
@@ -90,7 +90,7 @@
        "np.int64(6)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 64,
    "id": "95f28bf9",
    "metadata": {},
    "outputs": [
@@ -113,7 +113,7 @@
        "array([ 0,  2,  4,  6,  8, 10, 12])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,20 +129,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "08272ba0",
+   "execution_count": null,
+   "id": "1bd77e80",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0.],\n",
+       "       [0., 0.]])"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "big_shape = np.zeros((50,30))\n",
-    "# np.zeros() creates an array filled with zeros, the values are of float data type by default\n",
-    "# the shape of the array is defined by the shape parameter, which is a tuple representing the dimensions of the array\n",
-    "# syntax: np.zeros(shape, dtype=float, order='C')\n"
+    "\n",
+    "np.zeros((2,2))\n",
+    "# np.zeros creates an array (depending on specified shape), also defining its dimensions, filled with zeros, which in turn is considered as a tuple.\n",
+    "# Note: Keep in mind that the \"zeros\" data type are floats."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 67,
    "id": "afb16432",
    "metadata": {},
    "outputs": [],
@@ -155,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "f0e12ec8",
    "metadata": {},
    "outputs": [
@@ -204,22 +217,6 @@
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -227,132 +224,20 @@
       "text/plain": [
        "     0    1    2    3    4\n",
        "0  1.0  1.0  1.0  1.0  1.0\n",
-       "1  1.0  1.0  1.0  1.0  1.0\n",
-       "2  1.0  1.0  1.0  1.0  1.0\n",
-       "3  1.0  1.0  1.0  1.0  1.0"
+       "1  1.0  1.0  1.0  1.0  1.0"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ones_shape = np.ones((4,5))\n",
+    "ones_shape = np.ones((2,5))\n",
     "\n",
     "ones_shape = pd.DataFrame(ones_shape)\n",
     "\n",
     "ones_shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "id": "f0b80a7a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 0. ,  0.5,  1. ,  1.5,  2. ,  2.5,  3. ,  3.5,  4. ,  4.5,  5. ,\n",
-       "        5.5,  6. ,  6.5,  7. ,  7.5,  8. ,  8.5,  9. ,  9.5, 10. ])"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.linspace(0, 10, num=21)\n",
-    "# syntax: np.linspace(start, stop, num=50, endpoint=True, retstep=False, dtype=None, axis=0)\n",
-    "# start: starting value of the sequence\n",
-    "# stop: end value of the sequence\n",
-    "# Return evenly spaced numbers over a specified interval.\n",
-    "# dtype by default is float\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "id": "f7ac38a5",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "21"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(np.linspace(0, 10, num=21))\n",
-    "# this returns the length of the array generated by np.linspace()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "id": "9f095ce6",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "       [0., 1., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 1., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 1., 0., 0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 1., 0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 1., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0., 1., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0., 0., 1., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0., 0., 0., 1., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 1.]])"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.eye(10)\n",
-    "# numpy identity matrix of size 10x10\n",
-    "# np.eye() creates a 2-D array with ones on the diagonal and zeros elsewhere\n",
-    "# "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "id": "16b8e535",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0.94962531, 0.66054571, 0.29005426, 0.45539456, 0.5379216 ,\n",
-       "        0.44347921, 0.41190498, 0.48534818, 0.97586468, 0.61692393],\n",
-       "       [0.82396838, 0.77398881, 0.85912261, 0.04179478, 0.41964284,\n",
-       "        0.10928077, 0.35416596, 0.71789114, 0.37114347, 0.72330225],\n",
-       "       [0.62585436, 0.15238035, 0.43314327, 0.27353886, 0.21743171,\n",
-       "        0.21135507, 0.86528127, 0.56787519, 0.20088433, 0.55252122]])"
-      ]
-     },
-     "execution_count": 65,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Random Library\n",
-    "\n",
-    "np.random.rand(3,10)"
    ]
   }
  ],
