--- a/00-numpy-crash-course.ipynb
+++ b/00-numpy-crash-course.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 6,
    "id": "6d1f862f",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 7,
    "id": "1ced3cb9",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 8,
    "id": "2e506392",
    "metadata": {},
    "outputs": [
@@ -32,7 +32,7 @@
        "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10])"
       ]
      },
-     "execution_count": 236,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 9,
    "id": "7e2bad64",
    "metadata": {},
    "outputs": [
@@ -53,7 +53,7 @@
        "np.int64(8)"
       ]
      },
-     "execution_count": 237,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 10,
    "id": "1ce86852",
    "metadata": {},
    "outputs": [
@@ -74,7 +74,7 @@
        "array([1, 2, 3, 4])"
       ]
      },
-     "execution_count": 238,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 11,
    "id": "1cc6958f",
    "metadata": {},
    "outputs": [
@@ -95,7 +95,7 @@
        "array([0, 1, 2, 3, 4])"
       ]
      },
-     "execution_count": 239,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 12,
    "id": "db597345",
    "metadata": {},
    "outputs": [
@@ -116,7 +116,7 @@
        "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10])"
       ]
      },
-     "execution_count": 240,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 13,
    "id": "0e4c2ab6",
    "metadata": {},
    "outputs": [],
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 14,
    "id": "69c75092",
    "metadata": {},
    "outputs": [
@@ -149,7 +149,7 @@
        "array([100, 100, 100, 100, 100,   5,   6,   7,   8,   9,  10])"
       ]
      },
-     "execution_count": 242,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 15,
    "id": "63cdda3c",
    "metadata": {},
    "outputs": [],
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 16,
    "id": "0a935463",
    "metadata": {},
    "outputs": [],
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 17,
    "id": "351d8df1",
    "metadata": {},
    "outputs": [],
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 18,
    "id": "0a49760a",
    "metadata": {},
    "outputs": [
@@ -204,7 +204,7 @@
        "array([99, 99, 99, 99, 99])"
       ]
      },
-     "execution_count": 246,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 19,
    "id": "89e12b3d",
    "metadata": {},
    "outputs": [
@@ -225,7 +225,7 @@
        "array([99, 99, 99, 99, 99,  5,  6,  7,  8,  9, 10])"
       ]
      },
-     "execution_count": 247,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 20,
    "id": "9da08d61",
    "metadata": {},
    "outputs": [],
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 21,
    "id": "6d7443ed",
    "metadata": {},
    "outputs": [],
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 22,
    "id": "aca6be3b",
    "metadata": {},
    "outputs": [
@@ -272,7 +272,7 @@
        "array([100, 100, 100, 100, 100, 100, 100, 100, 100, 100, 100])"
       ]
      },
-     "execution_count": 250,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 23,
    "id": "ba6c3f82",
    "metadata": {},
    "outputs": [
@@ -296,7 +296,7 @@
        "array([99, 99, 99, 99, 99,  5,  6,  7,  8,  9, 10])"
       ]
      },
-     "execution_count": 251,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 24,
    "id": "31fac257",
    "metadata": {},
    "outputs": [],
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 25,
    "id": "af08be21",
    "metadata": {},
    "outputs": [
@@ -328,7 +328,7 @@
        "(3, 3)"
       ]
      },
-     "execution_count": 253,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 26,
    "id": "669c8116",
    "metadata": {},
    "outputs": [
@@ -349,7 +349,7 @@
        "3"
       ]
      },
-     "execution_count": 254,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 27,
    "id": "240965ec",
    "metadata": {},
    "outputs": [
@@ -371,7 +371,7 @@
        "       [25, 30]])"
       ]
      },
-     "execution_count": 255,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 28,
    "id": "f7912829",
    "metadata": {},
    "outputs": [],
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 29,
    "id": "b3b6ec87",
    "metadata": {},
    "outputs": [
@@ -404,7 +404,7 @@
        "array([ 1,  2,  3,  4,  5,  6,  7,  8,  9, 10])"
       ]
      },
-     "execution_count": 257,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 30,
    "id": "8f4490b4",
    "metadata": {},
    "outputs": [
@@ -426,7 +426,7 @@
        "        True])"
       ]
      },
-     "execution_count": 258,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 31,
    "id": "fecf7d84",
    "metadata": {},
    "outputs": [],
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 32,
    "id": "e3dc68fb",
    "metadata": {},
    "outputs": [
@@ -466,7 +466,7 @@
        "        True])"
       ]
      },
-     "execution_count": 260,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "1069e927",
    "metadata": {},
    "outputs": [
@@ -487,7 +487,7 @@
        "array([ 5,  6,  7,  8,  9, 10])"
       ]
      },
-     "execution_count": 262,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,6 +501,193 @@
     "# numeric values of the original array variable. Hence displaying the following output.\n",
     "\n",
     "# array([ 5,  6,  7,  8,  9, 10])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "c41ba104",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 3],\n",
+       "       [4, 5, 6]])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "arr = np.array([1,2,3,4,5, 6])\n",
+    "\n",
+    "arr.reshape(2, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "40f3e511",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "cannot reshape array of size 6 into shape (1,3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[35]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43marr\u001b[49m\u001b[43m.\u001b[49m\u001b[43mreshape\u001b[49m\u001b[43m(\u001b[49m\u001b[32;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m3\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[31mValueError\u001b[39m: cannot reshape array of size 6 into shape (1,3)"
+     ]
+    }
+   ],
+   "source": [
+    "arr.reshape(1, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "ba16df3c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ranarr = np.random.randint(0, 100, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "cb548032",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([62, 60, 78, 95, 49, 11, 57, 87, 13, 48], dtype=int32)"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ranarr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "1d30e9fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int32(95)"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ranarr.max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "8e9216c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int32(11)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ranarr.min()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b48d6f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(3)"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ranarr.argmax()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "fe457912",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(5)"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ranarr.argmin()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8aa15c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('int32')"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ranarr.dtype\n",
+    "\n",
+    "# .dtype() function returns us the data type of the array\n",
+    "# this is the data type of the array"
    ]
   }
  ],
